--- a/orbit-parent/pom.xml
+++ b/orbit-parent/pom.xml
@@ -16,7 +16,7 @@
 
 	<properties>
 		<camel.version>2.7.0</camel.version>
-		<tycho.version>0.12.0</tycho.version>
+		<tycho.version>0.10.0</tycho.version>
 		<spring.version>3.0.5.RELEASE</spring.version>
 		<springdm.version>1.2.1</springdm.version>
 		<axiom.version>1.2.11</axiom.version>
@@ -742,11 +742,6 @@
 			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.mongodb</groupId>
-			<artifactId>mongo-java-driver</artifactId>
-			<version>2.5.2</version>
-		</dependency>
-		<dependency>
 			<groupId>com.github.elyast.orbit</groupId>
 			<artifactId>org.apache.hbase</artifactId>
 			<version>0.90.2</version>
@@ -761,14 +756,14 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
+				<groupId>org.sonatype.tycho</groupId>
 				<artifactId>tycho-maven-plugin</artifactId>
 				<version>${tycho.version}</version>
 				<extensions>true</extensions>
 			</plugin>
 
 			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
+				<groupId>org.sonatype.tycho</groupId>
 				<artifactId>target-platform-configuration</artifactId>
 				<version>${tycho.version}</version>
 				<configuration>
@@ -778,5 +773,17 @@
 
 			</plugin>
 		</plugins>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+				<groupId>org.sonatype.tycho</groupId>
+				<artifactId>tycho-p2-publisher-plugin</artifactId>
+				<version>${tycho.version}</version>
+				<configuration>
+					<publishArtifacts>true</publishArtifacts>
+				</configuration>
+			</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
 </project>
