--- a/orbit-osgi-wrappers/pom.xml
+++ b/orbit-osgi-wrappers/pom.xml
@@ -53,5 +53,6 @@
 	<modules>
 		<module>org.apache.poi</module>
 		<module>org.apache.hbase</module>
+		<module>org.apache.camel.core.osgi</module>
 	</modules>
 </project>
