--- a/orbit-parent/pom.xml
+++ b/orbit-parent/pom.xml
@@ -15,7 +15,7 @@
 	</prerequisites>
 
 	<properties>
-		<camel.version>2.7.0</camel.version>
+		<camel.version>2.7.1</camel.version>
 		<tycho.version>0.10.0</tycho.version>
 		<spring.version>3.0.5.RELEASE</spring.version>
 		<springdm.version>1.2.1</springdm.version>
@@ -226,6 +226,11 @@
 			<artifactId>camel-core</artifactId>
 			<version>${camel.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.apache.camel.core.osgi</artifactId>
+			<version>${camel.version}</version>
+		</dependency>		
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-context</artifactId>
