--- a/orbit-parent/pom.xml
+++ b/orbit-parent/pom.xml
@@ -24,6 +24,8 @@
 		<datanucleus.version.m3>3.0.0-m3</datanucleus.version.m3>
 		<datanucleus.version.m2>3.0.0-m2</datanucleus.version.m2>
 		<datanucleus.version.m1>3.0.0-m1</datanucleus.version.m1>
+		<guice.version>3.0</guice.version>
+		
 	</properties>
 
 
@@ -687,6 +689,79 @@
 			<version>1.7.0</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.servicemix.specs</groupId>
+			<artifactId>org.apache.servicemix.specs.jsr311-api-1.1</artifactId>
+			<version>1.7.0</version>
+		</dependency>		
+		<dependency>
+		    <groupId>org.codehaus.jettison</groupId>
+		    <artifactId>jettison</artifactId>
+		    <version>1.3</version>
+		</dependency>
+		<dependency>
+		    <groupId>net.luminis.bundles</groupId>
+		    <artifactId>net.luminis.cmc</artifactId>
+		    <version>0.2.5</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.google.inject</groupId>
+		    <artifactId>guice</artifactId>
+		    <version>${guice.version}</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.google.inject</groupId>
+		    <artifactId>guice</artifactId>
+		    <version>${guice.version}</version>
+		</dependency>	
+		
+		<dependency>
+		    <groupId>com.google.inject.extensions</groupId>
+		    <artifactId>guice-assistedinject</artifactId>
+		    <version>${guice.version}</version>
+		</dependency>		
+		
+		<dependency>
+		    <groupId>com.google.inject.extensions</groupId>
+		    <artifactId>guice-grapher</artifactId>
+		    <version>${guice.version}</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.google.inject.extensions</groupId>
+		    <artifactId>guice-jmx</artifactId>
+		    <version>${guice.version}</version>
+		</dependency>			
+		
+		<dependency>
+		    <groupId>com.google.inject.extensions</groupId>
+		    <artifactId>guice-multibindings</artifactId>
+		    <version>${guice.version}</version>
+		</dependency>		
+		
+		<dependency>
+		    <groupId>com.google.inject.extensions</groupId>
+		    <artifactId>guice-persist</artifactId>
+		    <version>${guice.version}</version>
+		</dependency>					
+		<dependency>
+		    <groupId>com.google.inject.extensions</groupId>
+		    <artifactId>guice-servlet</artifactId>
+		    <version>${guice.version}</version>
+		</dependency>		
+		<dependency>
+		    <groupId>com.google.inject.extensions</groupId>
+		    <artifactId>guice-spring</artifactId>
+		    <version>${guice.version}</version>
+		</dependency>	
+		
+		<dependency>
+		    <groupId>com.google.inject.extensions</groupId>
+		    <artifactId>guice-throwingproviders</artifactId>
+		    <version>${guice.version}</version>
+		</dependency>			
+						
+		<dependency>
 			<groupId>org.apache.servicemix.bundles</groupId>
 			<artifactId>org.apache.servicemix.bundles.jain-sip-ri</artifactId>
 			<version>1.2.154_1</version>
@@ -756,6 +831,8 @@
 			<artifactId>com.springsource.joptsimple</artifactId>
 			<version>3.0.0</version>
 		</dependency>
+		
+		
 
 	</dependencies>
 	<build>
