--- a/orbit-parent/pom.xml
+++ b/orbit-parent/pom.xml
@@ -710,12 +710,6 @@
 		</dependency>
 		
 		<dependency>
-		    <groupId>com.google.inject</groupId>
-		    <artifactId>guice</artifactId>
-		    <version>${guice.version}</version>
-		</dependency>	
-		
-		<dependency>
 		    <groupId>com.google.inject.extensions</groupId>
 		    <artifactId>guice-assistedinject</artifactId>
 		    <version>${guice.version}</version>
@@ -733,6 +727,11 @@
 		    <version>${guice.version}</version>
 		</dependency>			
 		
+		<dependency>
+		    <groupId>com.google.inject.extensions</groupId>
+		    <artifactId>guice-jndi</artifactId>
+		    <version>${guice.version}</version>
+		</dependency>		
 		<dependency>
 		    <groupId>com.google.inject.extensions</groupId>
 		    <artifactId>guice-multibindings</artifactId>
