--- a/org.apache.camel.feature/pom.xml
+++ b/org.apache.camel.feature/pom.xml
@@ -7,7 +7,7 @@
 		<version>1.0.0-SNAPSHOT</version>
 		<relativePath>../orbit-parent/pom.xml</relativePath>
 	</parent>
-	<artifactId>org.apache.camel.core.feature</artifactId>
+	<artifactId>org.apache.camel.feature</artifactId>
 	<packaging>eclipse-feature</packaging>
 	
 
