--- a/orbit-osgi-wrappers/org.apache.camel.camel-core-osgi/pom.xml
+++ b/orbit-osgi-wrappers/org.apache.camel.camel-core-osgi/pom.xml
@@ -6,7 +6,7 @@
 		<artifactId>orbit-osgi-wrappers</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>org.apache.camel.core.osgi</artifactId>
+	<artifactId>org.apache.camel.camel-core-osgi</artifactId>
 	<version>2.7.1</version>
 	<packaging>bundle</packaging>
 	<name>${bundle.symbolicName}</name>
@@ -20,7 +20,7 @@
 	<properties>
 		<wrapped.version>2.7.1</wrapped.version>
 		<wrapped.artifactId>camel-core-osgi</wrapped.artifactId>
-		<bundle.symbolicName>org.apache.camel.core.osgi</bundle.symbolicName>
+		<bundle.symbolicName>org.apache.camel.camel-core-osgi</bundle.symbolicName>
 		<wrapped.groupId>org.apache.camel</wrapped.groupId>
 	</properties>
 
