--- a/orbit-parent/pom.xml
+++ b/orbit-parent/pom.xml
@@ -236,9 +236,15 @@
 		</dependency>		
 		<dependency>
 			<groupId>com.github.elyast.orbit</groupId>
-			<artifactId>org.apache.camel.core.osgi</artifactId>
+			<artifactId>org.apache.camel.camel-core-osgi</artifactId>
 			<version>${camel.version}</version>
-		</dependency>		
+		</dependency>	
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-core-osgi</artifactId>
+			<version>${camel.version}</version>
+			<classifier>sources</classifier>
+		</dependency>			
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-context</artifactId>
@@ -246,9 +252,21 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-context</artifactId>
+			<version>${camel.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
+			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-crypto</artifactId>
 			<version>${camel.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-crypto</artifactId>
+			<version>${camel.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-routebox</artifactId>
@@ -256,9 +274,21 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-routebox</artifactId>
+			<version>${camel.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
+			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-eventadmin</artifactId>
 			<version>${camel.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-eventadmin</artifactId>
+			<version>${camel.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-cache</artifactId>
@@ -266,9 +296,21 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-cache</artifactId>
+			<version>${camel.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
+			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-juel</artifactId>
 			<version>${camel.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-juel</artifactId>
+			<version>${camel.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-exec</artifactId>
@@ -276,9 +318,21 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-exec</artifactId>
+			<version>${camel.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
+			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-jmx</artifactId>
 			<version>${camel.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-jmx</artifactId>
+			<version>${camel.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
 
 		<!-- Camel Misc Feature -->
 		<dependency>
@@ -288,14 +342,32 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-lucene</artifactId>
+			<version>${camel.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
+			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-printer</artifactId>
+			<version>${camel.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-printer</artifactId>
+			<version>${camel.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-quartz</artifactId>
 			<version>${camel.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-quartz</artifactId>
 			<version>${camel.version}</version>
-		</dependency>
+			<classifier>sources</classifier>
+		</dependency>		
 
 		<!-- HTTP Feature -->
 		<dependency>
@@ -305,9 +377,21 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-http4</artifactId>
+			<version>${camel.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
+			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-http</artifactId>
 			<version>${camel.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-http</artifactId>
+			<version>${camel.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-servlet</artifactId>
@@ -315,9 +399,21 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-servlet</artifactId>
+			<version>${camel.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
+			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-jetty</artifactId>
 			<version>${camel.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-jetty</artifactId>
+			<version>${camel.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-cxf</artifactId>
@@ -325,9 +421,21 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-cxf</artifactId>
+			<version>${camel.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
+			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-spring</artifactId>
 			<version>${camel.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-spring</artifactId>
+			<version>${camel.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-rss</artifactId>
@@ -335,9 +443,21 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-rss</artifactId>
+			<version>${camel.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
+			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-atom</artifactId>
 			<version>${camel.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-atom</artifactId>
+			<version>${camel.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
 
 		<!-- CAMEL TCP -->
 		<dependency>
@@ -347,9 +467,21 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-jms</artifactId>
+			<version>${camel.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
+			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-ftp</artifactId>
 			<version>${camel.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-ftp</artifactId>
+			<version>${camel.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-ldap</artifactId>
@@ -357,9 +489,21 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-ldap</artifactId>
+			<version>${camel.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
+			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-mail</artifactId>
 			<version>${camel.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-mail</artifactId>
+			<version>${camel.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-protobuf</artifactId>
@@ -367,9 +511,21 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-protobuf</artifactId>
+			<version>${camel.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
+			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-rmi</artifactId>
 			<version>${camel.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-rmi</artifactId>
+			<version>${camel.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-xmpp</artifactId>
@@ -377,9 +533,21 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-xmpp</artifactId>
+			<version>${camel.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
+			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-sip</artifactId>
 			<version>${camel.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-sip</artifactId>
+			<version>${camel.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-smpp</artifactId>
@@ -387,9 +555,21 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-smpp</artifactId>
+			<version>${camel.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
+			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-snmp</artifactId>
 			<version>${camel.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-snmp</artifactId>
+			<version>${camel.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
 
 		<!-- DATA -->
 		<dependency>
@@ -399,9 +579,21 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-sql</artifactId>
+			<version>${camel.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
+			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-jdbc</artifactId>
 			<version>${camel.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-jdbc</artifactId>
+			<version>${camel.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-jackson</artifactId>
@@ -409,9 +601,21 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-jackson</artifactId>
+			<version>${camel.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
+			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-jaxb</artifactId>
 			<version>${camel.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-jaxb</artifactId>
+			<version>${camel.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-csv</artifactId>
@@ -419,10 +623,23 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-csv</artifactId>
+			<version>${camel.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
+			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-hazelcast</artifactId>
 			<version>${camel.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-hazelcast</artifactId>
+			<version>${camel.version}</version>
+			<classifier>sources</classifier>
+		</dependency>
+				
+		<dependency><!-- nosources -->
 			<groupId>javax.jdo</groupId>
 			<artifactId>jdo-api</artifactId>
 			<version>3.0.0</version>
@@ -432,7 +649,7 @@
 			<artifactId>com.springsource.javax.validation</artifactId>
 			<version>1.0.0.GA</version>
 		</dependency>
-		<dependency>
+		<dependency><!-- nosources -->
 			<groupId>org.apache.servicemix.bundles</groupId>
 			<artifactId>org.apache.servicemix.bundles.spymemcached</artifactId>
 			<version>2.5_1</version>
@@ -452,7 +669,7 @@
 			<artifactId>org.apache.poi</artifactId>
 			<version>3.8-beta2</version>
 		</dependency>
-		<dependency>
+		<dependency><!-- nosources -->
 			<groupId>org.apache.servicemix.bundles</groupId>
 			<artifactId>org.apache.servicemix.bundles.ehcache</artifactId>
 			<version>2.3.0_1</version>
@@ -469,7 +686,7 @@
 			<version>2.5</version>
 		</dependency>
 
-		<dependency>
+		<dependency><!-- nosources -->
 			<groupId>org.apache.servicemix.bundles</groupId>
 			<artifactId>org.apache.servicemix.bundles.juel</artifactId>
 			<version>2.1.2_2</version>
@@ -524,11 +741,17 @@
 			<version>2.3.3</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-bundle</artifactId>
+			<version>2.3.3</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
 			<groupId>org.antlr</groupId>
 			<artifactId>com.springsource.antlr</artifactId>
 			<version>2.7.7</version>
 		</dependency>
-		<dependency>
+		<dependency><!-- nosources -->
 			<groupId>org.apache.servicemix.bundles</groupId>
 			<artifactId>org.apache.servicemix.bundles.jaxb-xjc</artifactId>
 			<version>2.2.1.1_1</version>
@@ -678,23 +901,23 @@
 			<artifactId>xsdlib</artifactId>
 			<version>2010.1</version>
 		</dependency>
-		<dependency>
+		<dependency><!-- nosources -->
 			<groupId>org.apache.servicemix.bundles</groupId>
 			<artifactId>org.apache.servicemix.bundles.protobuf-java</artifactId>
 			<version>2.3.0_1</version>
 		</dependency>
 
-		<dependency>
+		<dependency><!-- nosources -->
 			<groupId>org.apache.servicemix.bundles</groupId>
 			<artifactId>org.apache.servicemix.bundles.smack</artifactId>
 			<version>3.1.0_3</version>
 		</dependency>
-		<dependency>
+		<dependency><!-- nosources -->
 			<groupId>org.apache.servicemix.specs</groupId>
 			<artifactId>org.apache.servicemix.specs.jain-sip-api-1.2</artifactId>
 			<version>1.7.0</version>
 		</dependency>
-		<dependency>
+		<dependency><!-- nosources -->
 			<groupId>org.apache.servicemix.specs</groupId>
 			<artifactId>org.apache.servicemix.specs.jsr311-api-1.1</artifactId>
 			<version>1.7.0</version>
@@ -704,7 +927,7 @@
 		    <artifactId>jettison</artifactId>
 		    <version>1.3</version>
 		</dependency>
-		<dependency>
+		<dependency><!-- nosources -->
 		    <groupId>net.luminis.bundles</groupId>
 		    <artifactId>net.luminis.cmc</artifactId>
 		    <version>0.2.5</version>
@@ -714,25 +937,21 @@
 		    <artifactId>guice</artifactId>
 		    <version>${guice.version}</version>
 		</dependency>
-		
 		<dependency>
 		    <groupId>com.google.inject.extensions</groupId>
 		    <artifactId>guice-assistedinject</artifactId>
 		    <version>${guice.version}</version>
 		</dependency>		
-		
 		<dependency>
 		    <groupId>com.google.inject.extensions</groupId>
 		    <artifactId>guice-grapher</artifactId>
 		    <version>${guice.version}</version>
 		</dependency>
-		
 		<dependency>
 		    <groupId>com.google.inject.extensions</groupId>
 		    <artifactId>guice-jmx</artifactId>
 		    <version>${guice.version}</version>
 		</dependency>			
-		
 		<dependency>
 		    <groupId>com.google.inject.extensions</groupId>
 		    <artifactId>guice-jndi</artifactId>
@@ -743,7 +962,6 @@
 		    <artifactId>guice-multibindings</artifactId>
 		    <version>${guice.version}</version>
 		</dependency>		
-		
 		<dependency>
 		    <groupId>com.google.inject.extensions</groupId>
 		    <artifactId>guice-persist</artifactId>
@@ -759,29 +977,27 @@
 		    <artifactId>guice-spring</artifactId>
 		    <version>${guice.version}</version>
 		</dependency>	
-		
 		<dependency>
 		    <groupId>com.google.inject.extensions</groupId>
 		    <artifactId>guice-throwingproviders</artifactId>
 		    <version>${guice.version}</version>
 		</dependency>			
-						
-		<dependency>
+		<dependency><!-- nosources -->
 			<groupId>org.apache.servicemix.bundles</groupId>
 			<artifactId>org.apache.servicemix.bundles.jain-sip-ri</artifactId>
 			<version>1.2.154_1</version>
 		</dependency>
-		<dependency>
+		<dependency><!-- nosources -->
 			<groupId>org.apache.servicemix.bundles</groupId>
 			<artifactId>org.apache.servicemix.bundles.snmp4j</artifactId>
 			<version>1.8.1_4</version>
 		</dependency>
-		<dependency>
+		<dependency><!-- nosources -->
 			<groupId>org.apache.servicemix.bundles</groupId>
 			<artifactId>org.apache.servicemix.bundles.jsmpp</artifactId>
 			<version>2.1.0_2</version>
 		</dependency>
-		<dependency>
+		<dependency><!-- nosources -->
 			<groupId>org.apache.servicemix.bundles</groupId>
 			<artifactId>org.apache.servicemix.bundles.rome</artifactId>
 			<version>1.0_1</version>
@@ -811,7 +1027,7 @@
 			<artifactId>jackson-xc</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
-		<dependency>
+		<dependency><!-- nosources -->
 			<groupId>org.apache.servicemix.bundles</groupId>
 			<artifactId>org.apache.servicemix.bundles.commons-csv</artifactId>
 			<version>1.0-r706899_3</version>
@@ -836,9 +1052,6 @@
 			<artifactId>com.springsource.joptsimple</artifactId>
 			<version>3.0.0</version>
 		</dependency>
-		
-		
-
 	</dependencies>
 	<build>
 		<plugins>
