added wrapper for source bundles

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<module>com.google.guice.feature</module>
 		<module>com.github.elyast.orbit.repository</module>
 		<module>com.github.elyast.orbit.tests</module>
+		<module>orbit-source-wrappers</module>
 	</modules>
 
 </project>
