--- a/orbit-parent/pom.xml
+++ b/orbit-parent/pom.xml
@@ -796,81 +796,165 @@
 			<version>1.6.0</version>
 		</dependency>
 		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>com.springsource.org.joda.time.source</artifactId>
+			<version>1.6.0</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
 			<groupId>commons-dbcp</groupId>
 			<artifactId>commons-dbcp</artifactId>
 			<version>1.3</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.apache.commons.dbcp.source</artifactId>
+			<version>1.3</version>
+			<classifier>sources</classifier>
+		</dependency>			
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
 			<artifactId>org.apache.poi</artifactId>
 			<version>3.8-beta2</version>
 		</dependency>
-		<dependency><!-- nosources -->
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.apache.poi.source</artifactId>
+			<version>3.8-beta2</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
 			<groupId>org.apache.servicemix.bundles</groupId>
 			<artifactId>org.apache.servicemix.bundles.ehcache</artifactId>
 			<version>2.3.0_1</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.apache.servicemix.bundles.ehcache.source</artifactId>
+			<version>2.3.0.1</version>
+			<classifier>sources</classifier>
+		</dependency>	
 		<dependency>
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
 			<version>1.4</version>
 		</dependency>
 		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.apache.commons.codec.source</artifactId>
+			<version>1.4</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 			<version>2.5</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.apache.commons.lang.source</artifactId>
+			<version>2.5</version>
+			<classifier>sources</classifier>
+		</dependency>
 		<dependency><!-- nosources -->
 			<groupId>org.apache.servicemix.bundles</groupId>
 			<artifactId>org.apache.servicemix.bundles.juel</artifactId>
 			<version>2.1.2_2</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.apache.servicemix.bundles.juel.source</artifactId>
+			<version>2.1.2.2</version>
+			<classifier>sources</classifier>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.ws.commons.axiom</groupId>
 			<artifactId>axiom-impl</artifactId>
 			<version>${axiom.version}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.apache.ws.commons.axiom.axiom-impl.source</artifactId>
+			<version>${axiom.version}</version>
+			<classifier>sources</classifier>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.ws.commons.axiom</groupId>
 			<artifactId>axiom-api</artifactId>
 			<version>${axiom.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.apache.ws.commons.axiom.axiom-api.source</artifactId>
+			<version>${axiom.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
 			<groupId>org.fusesource.commonman</groupId>
 			<artifactId>commons-management</artifactId>
 			<version>1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>commons-management.source</artifactId>
+			<version>1.0</version>
+			<classifier>sources</classifier>
+		</dependency>			
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-exec</artifactId>
 			<version>1.0.1</version>
 		</dependency>
 		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.apache.commons.exec.source</artifactId>
+			<version>1.0.1</version>
+			<classifier>sources</classifier>
+		</dependency>			
+		<dependency>
 			<groupId>org.springframework.osgi</groupId>
 			<artifactId>spring-osgi-core</artifactId>
 			<version>${springdm.version}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.springframework.osgi.core.source</artifactId>
+			<version>${springdm.version}</version>
+			<classifier>sources</classifier>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.osgi</groupId>
 			<artifactId>spring-osgi-io</artifactId>
 			<version>${springdm.version}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.springframework.osgi.io.source</artifactId>
+			<version>${springdm.version}</version>
+			<classifier>sources</classifier>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.servicemix.bundles</groupId>
 			<artifactId>org.apache.servicemix.bundles.abdera</artifactId>
 			<version>0.4.0-incubating_4</version>
 		</dependency>
 		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.apache.servicemix.bundles.abdera.source</artifactId>
+			<version>0.4.0.incubating_4</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
 			<groupId>org.jaxen</groupId>
 			<artifactId>com.springsource.org.jaxen</artifactId>
 			<version>1.1.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>com.springsource.org.jaxen.source</artifactId>
+			<version>1.1.1</version>
+			<classifier>sources</classifier>
+		</dependency>		
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-bundle</artifactId>
@@ -887,63 +971,122 @@
 			<artifactId>com.springsource.antlr</artifactId>
 			<version>2.7.7</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>com.springsource.antlr.source</artifactId>
+			<version>2.7.7</version>
+			<classifier>sources</classifier>
+		</dependency>		
 		<dependency><!-- nosources -->
 			<groupId>org.apache.servicemix.bundles</groupId>
 			<artifactId>org.apache.servicemix.bundles.jaxb-xjc</artifactId>
 			<version>2.2.1.1_1</version>
 		</dependency>
 		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.apache.servicemix.bundles.jaxb-xjc.source</artifactId>
+			<version>2.2.1.1_1</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
 			<groupId>com.sun.xml</groupId>
 			<artifactId>com.springsource.com.sun.xml.messaging.saaj</artifactId>
 			<version>1.3.2</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>com.springsource.com.sun.xml.messaging.saaj.source</artifactId>
+			<version>1.3.2</version>
+			<classifier>sources</classifier>
+		</dependency>
 		<dependency>
 			<groupId>org.dom4j</groupId>
 			<artifactId>com.springsource.org.dom4j</artifactId>
 			<version>1.6.1</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>com.springsource.org.dom4j.source</artifactId>
+			<version>1.6.1</version>
+			<classifier>sources</classifier>
+		</dependency>
 		<dependency>
 			<groupId>org.jvnet.staxex</groupId>
 			<artifactId>com.springsource.org.jvnet.staxex</artifactId>
 			<version>1.0.0</version>
 		</dependency>
 		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>com.springsource.org.jvnet.staxex.source</artifactId>
+			<version>1.0.0</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
 			<groupId>com.sun.xml</groupId>
 			<artifactId>com.springsource.com.sun.xml.fastinfoset</artifactId>
 			<version>1.2.2</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>com.springsource.com.sun.xml.fastinfoset.source</artifactId>
+			<version>1.2.2</version>
+			<classifier>sources</classifier>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.geronimo.specs</groupId>
 			<artifactId>geronimo-jms_1.1_spec</artifactId>
 			<version>1.1.1</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.apache.geronimo.specs.geronimo-jms_1.1_spec.source</artifactId>
+			<version>1.1.1</version>
+			<classifier>sources</classifier>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.xmlbeans</groupId>
 			<artifactId>com.springsource.org.apache.xmlbeans</artifactId>
 			<version>2.4.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>com.springsource.org.apache.xmlbeans.source</artifactId>
+			<version>2.4.0</version>
+			<classifier>sources</classifier>
+		</dependency>
 		<dependency>
 			<groupId>org.codehaus.woodstox</groupId>
 			<artifactId>woodstox-core-asl</artifactId>
 			<version>4.0.8</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>woodstox-core-asl.source</artifactId>
+			<version>4.0.8</version>
+			<classifier>sources</classifier>
+		</dependency>
 		<dependency>
 			<groupId>org.codehaus.woodstox</groupId>
 			<artifactId>stax2-api</artifactId>
 			<version>3.0.2</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>stax2-api.source</artifactId>
+			<version>3.0.2</version>
+			<classifier>sources</classifier>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.ws.security</groupId>
 			<artifactId>wss4j</artifactId>
 			<version>1.5.11</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.apache.ws.security.wss4j.source</artifactId>
+			<version>1.5.11</version>
+			<classifier>sources</classifier>
+		</dependency>		
 		<dependency>
 			<groupId>org.apache.velocity</groupId>
 			<artifactId>com.springsource.org.apache.velocity</artifactId>
