--- a/orbit-parent/pom.xml
+++ b/orbit-parent/pom.xml
@@ -1093,119 +1093,242 @@
 			<version>1.6.2</version>
 		</dependency>
 		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>com.springsource.org.apache.velocity.source</artifactId>
+			<version>1.6.2</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
 			<groupId>org.mozilla.javascript</groupId>
 			<artifactId>com.springsource.org.mozilla.javascript</artifactId>
 			<version>1.7.0.R2</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>com.springsource.org.mozilla.javascript.source</artifactId>
+			<version>1.7.0.R2</version>
+			<classifier>sources</classifier>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aop</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.springframework.aop.source</artifactId>
+			<version>${spring.version}</version>
+			<classifier>sources</classifier>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-asm</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.springframework.asm.source</artifactId>
+			<version>${spring.version}</version>
+			<classifier>sources</classifier>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-beans</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.springframework.beans.source</artifactId>
+			<version>${spring.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.springframework.context.source</artifactId>
+			<version>${spring.version}</version>
+			<classifier>sources</classifier>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.springframework.core.source</artifactId>
+			<version>${spring.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-expression</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+			<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.springframework.expression.source</artifactId>
+			<version>${spring.version}</version>
+			<classifier>sources</classifier>
+		</dependency>	
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.springframework.context.support.source</artifactId>
+			<version>${spring.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jms</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.springframework.jms.source</artifactId>
+			<version>${spring.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-
-
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.springframework.jdbc.source</artifactId>
+			<version>${spring.version}</version>
+			<classifier>sources</classifier>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-tx</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.springframework.transaction.source</artifactId>
+			<version>${spring.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.springframework.web.source</artifactId>
+			<version>${spring.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
 			<groupId>net.java.dev.msv</groupId>
 			<artifactId>msv-core</artifactId>
 			<version>2011.1</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>msv-core.source</artifactId>
+			<version>2011.1</version>
+			<classifier>sources</classifier>
+		</dependency>
 		<dependency>
 			<groupId>org.relaxng</groupId>
 			<artifactId>com.springsource.org.relaxng.datatype</artifactId>
 			<version>1.0.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>com.springsource.org.relaxng.datatype.source</artifactId>
+			<version>1.0.0</version>
+			<classifier>sources</classifier>
+		</dependency>
 		<dependency>
 			<groupId>net.sourceforge.iso-relax</groupId>
 			<artifactId>com.springsource.org.iso_relax.verifier</artifactId>
 			<version>0.0.0.20041111</version>
 		</dependency>
 		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>com.springsource.org.iso_relax.verifier.source</artifactId>
+			<version>0.0.0.20041111</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
 			<groupId>com.sun.msv.datatype.xsd</groupId>
 			<artifactId>xsdlib</artifactId>
 			<version>2010.1</version>
 		</dependency>
-		<dependency><!-- nosources -->
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>xsdlib.source</artifactId>
+			<version>2010.1</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
 			<groupId>org.apache.servicemix.bundles</groupId>
 			<artifactId>org.apache.servicemix.bundles.protobuf-java</artifactId>
 			<version>2.3.0_1</version>
 		</dependency>
-
-		<dependency><!-- nosources -->
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.apache.servicemix.bundles.protobuf-java.source</artifactId>
+			<version>2.3.0.1</version>
+			<classifier>sources</classifier>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.servicemix.bundles</groupId>
 			<artifactId>org.apache.servicemix.bundles.smack</artifactId>
 			<version>3.1.0_3</version>
 		</dependency>
-		<dependency><!-- nosources -->
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.apache.servicemix.bundles.smack.source</artifactId>
+			<version>3.1.0.3</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
 			<groupId>org.apache.servicemix.specs</groupId>
 			<artifactId>org.apache.servicemix.specs.jain-sip-api-1.2</artifactId>
 			<version>1.7.0</version>
 		</dependency>
-		<dependency><!-- nosources -->
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.apache.servicemix.specs.jain-sip-api-1.2.source</artifactId>
+			<version>1.7.0</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
 			<groupId>org.apache.servicemix.specs</groupId>
 			<artifactId>org.apache.servicemix.specs.jsr311-api-1.1</artifactId>
 			<version>1.7.0</version>
-		</dependency>		
+		</dependency>	
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.apache.servicemix.specs.jsr311-api-1.1.source</artifactId>
+			<version>1.7.0</version>
+			<classifier>sources</classifier>
+		</dependency>			
 		<dependency>
 		    <groupId>org.codehaus.jettison</groupId>
 		    <artifactId>jettison</artifactId>
 		    <version>1.3</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.codehaus.jettison.jettison.source</artifactId>
+			<version>1.3</version>
+			<classifier>sources</classifier>
+		</dependency>		
 		<dependency><!-- nosources -->
 		    <groupId>net.luminis.bundles</groupId>
 		    <artifactId>net.luminis.cmc</artifactId>
@@ -1217,29 +1340,65 @@
 		    <version>${guice.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>com.google.inject.source</artifactId>
+			<version>${guice.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
 		    <groupId>com.google.inject.extensions</groupId>
 		    <artifactId>guice-assistedinject</artifactId>
 		    <version>${guice.version}</version>
-		</dependency>		
+		</dependency>	
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>com.google.inject.assistedinject.source</artifactId>
+			<version>${guice.version}</version>
+			<classifier>sources</classifier>
+		</dependency>			
 		<dependency>
 		    <groupId>com.google.inject.extensions</groupId>
 		    <artifactId>guice-grapher</artifactId>
 		    <version>${guice.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>com.google.inject.grapher.source</artifactId>
+			<version>${guice.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
 		    <groupId>com.google.inject.extensions</groupId>
 		    <artifactId>guice-jmx</artifactId>
 		    <version>${guice.version}</version>
 		</dependency>			
 		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>com.google.inject.tools.jmx.source</artifactId>
+			<version>${guice.version}</version>
+			<classifier>sources</classifier>
+		</dependency>
+		<dependency>
 		    <groupId>com.google.inject.extensions</groupId>
 		    <artifactId>guice-jndi</artifactId>
 		    <version>${guice.version}</version>
-		</dependency>		
+		</dependency>	
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>com.google.inject.jndi.source</artifactId>
+			<version>${guice.version}</version>
+			<classifier>sources</classifier>
+		</dependency>			
 		<dependency>
 		    <groupId>com.google.inject.extensions</groupId>
 		    <artifactId>guice-multibindings</artifactId>
 		    <version>${guice.version}</version>
+		</dependency>		
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>com.google.inject.multibindings.source</artifactId>
+			<version>${guice.version}</version>
+			<classifier>sources</classifier>
 		</dependency>		
 		<dependency>
 		    <groupId>com.google.inject.extensions</groupId>
@@ -1247,9 +1406,21 @@
 		    <version>${guice.version}</version>
 		</dependency>					
 		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>com.google.inject.persist.source</artifactId>
+			<version>${guice.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
 		    <groupId>com.google.inject.extensions</groupId>
 		    <artifactId>guice-servlet</artifactId>
 		    <version>${guice.version}</version>
+		</dependency>		
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>com.google.inject.servlet.source</artifactId>
+			<version>${guice.version}</version>
+			<classifier>sources</classifier>
 		</dependency>		
 		<dependency>
 		    <groupId>com.google.inject.extensions</groupId>
@@ -1257,55 +1428,115 @@
 		    <version>${guice.version}</version>
 		</dependency>	
 		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>com.google.inject.spring.source</artifactId>
+			<version>${guice.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
 		    <groupId>com.google.inject.extensions</groupId>
 		    <artifactId>guice-throwingproviders</artifactId>
 		    <version>${guice.version}</version>
 		</dependency>			
-		<dependency><!-- nosources -->
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>com.google.inject.throwingproviders.source</artifactId>
+			<version>${guice.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
 			<groupId>org.apache.servicemix.bundles</groupId>
 			<artifactId>org.apache.servicemix.bundles.jain-sip-ri</artifactId>
 			<version>1.2.154_1</version>
 		</dependency>
-		<dependency><!-- nosources -->
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.apache.servicemix.bundles.jain-sip-ri.source</artifactId>
+			<version>1.2.154.1</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
 			<groupId>org.apache.servicemix.bundles</groupId>
 			<artifactId>org.apache.servicemix.bundles.snmp4j</artifactId>
 			<version>1.8.1_4</version>
 		</dependency>
-		<dependency><!-- nosources -->
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.apache.servicemix.bundles.snmp4j.source</artifactId>
+			<version>1.8.1.4</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
 			<groupId>org.apache.servicemix.bundles</groupId>
 			<artifactId>org.apache.servicemix.bundles.jsmpp</artifactId>
 			<version>2.1.0_2</version>
 		</dependency>
-		<dependency><!-- nosources -->
+		<dependency>
 			<groupId>org.apache.servicemix.bundles</groupId>
 			<artifactId>org.apache.servicemix.bundles.rome</artifactId>
 			<version>1.0_1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.apache.servicemix.bundles.rome.source</artifactId>
+			<version>1.0.1</version>
+			<classifier>sources</classifier>
+		</dependency>		
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-asl</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>jackson-mapper-asl.source</artifactId>
+			<version>${jackson.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-core-asl</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>jackson-core-asl.source</artifactId>
+			<version>${jackson.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-jaxrs</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>jackson-jaxrs.source</artifactId>
+			<version>${jackson.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-smile</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>jackson-smile.source</artifactId>
+			<version>${jackson.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-xc</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>jackson-xc.source</artifactId>
+			<version>${jackson.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
 		<dependency><!-- nosources -->
 			<groupId>org.apache.servicemix.bundles</groupId>
 			<artifactId>org.apache.servicemix.bundles.commons-csv</artifactId>
@@ -1317,20 +1548,44 @@
 			<version>1.9.2</version>
 		</dependency>
 		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>hazelcast.source</artifactId>
+			<version>1.9.2</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.springframework.orm.source</artifactId>
+			<version>${spring.version}</version>
+			<classifier>sources</classifier>
+		</dependency>		
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
 			<artifactId>org.apache.hbase</artifactId>
 			<version>0.90.2</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>org.apache.hadoop.hbase.source</artifactId>
+			<version>0.90.2</version>
+			<classifier>sources</classifier>
+		</dependency>		
 		<dependency>
 			<groupId>net.sourceforge.jopt-simple</groupId>
 			<artifactId>com.springsource.joptsimple</artifactId>
 			<version>3.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.elyast.orbit</groupId>
+			<artifactId>com.springsource.joptsimple.source</artifactId>
+			<version>3.0.0</version>
+			<classifier>sources</classifier>
+		</dependency>		
 	</dependencies>
 	<build>
 		<plugins>
