--- a/orbit-source-wrappers/org.datanucleus.api.rest.source/pom.xml
+++ b/orbit-source-wrappers/org.datanucleus.api.rest.source/pom.xml
@@ -8,7 +8,7 @@
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>org.datanucleus.api.rest.source</artifactId>
-	<version>3.0.0-m1</version>
+	<version>3.0.0.m1</version>
 	<properties>
 		<wrapped.version>3.0.0-m1</wrapped.version>
 		<wrapped.artifactId>datanucleus-api-rest</wrapped.artifactId>
