--- a/osgi/source/pom.xml
+++ b/osgi/source/pom.xml
@@ -23,7 +23,7 @@
 				<version>2.2</version><!--$NO-MVN-MAN-VER$ -->
 				<executions>
 					<execution>
-						<phase>package</phase>
+						<phase>prepare-package</phase>
 						<goals>
 							<goal>unpack-dependencies</goal>
 						</goals>
@@ -37,14 +37,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>2.3.1</version>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>jar</goal>
-						</goals>
 						<configuration>
-							<classifier>sources</classifier>
+							<!--  >classifier>sources</classifier-->
 							<classesDirectory>${project.build.directory}/dependency</classesDirectory>
 							<archive>
 								<manifestEntries>
@@ -56,8 +50,6 @@
 								</manifestEntries>
 							</archive>
 						</configuration>
-					</execution>
-				</executions>
 			</plugin>
 		</plugins>
 	</build>
@@ -90,7 +82,8 @@
 		<module>com.springsource.org.joda.time.source</module>
 		<module>com.springsource.javax.validation.source</module>
 		<module>javax.cache.source</module>
-		<module>mx4j.tools.source</module>				
+		<module>mx4j.tools.source</module>	
+		<module>org.apache.servicemix.bundles.ehcache.source</module>			
 	</modules>
 	
 	<repositories>
